--- a/cpp/SU24-vectorpractice/CMakeLists.txt
+++ b/cpp/SU24-vectorpractice/CMakeLists.txt
@@ -7,37 +7,37 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+# add_executable(VectorPractice_test VectorPractice_unittest.cpp)
+# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+# # set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 
-add_library(VectorPractice  VectorPractice.cpp)
+# add_library(VectorPractice  VectorPractice.cpp)
 
-target_include_directories(VectorPractice  PUBLIC include)
+# target_include_directories(VectorPractice  PUBLIC include)
 
-add_executable(first main.cpp)
-target_link_libraries(first PUBLIC VectorPractice)
+# add_executable(first main.cpp)
+# target_link_libraries(first PUBLIC VectorPractice)
 
-enable_testing()
+# enable_testing()
 
-include(FetchContent)
+# include(FetchContent)
 
-FetchContent_Declare(
-  googletest
-  GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG        release-1.11.0
-)
-FetchContent_MakeAvailable(googletest)
+# FetchContent_Declare(
+#   googletest
+#   GIT_REPOSITORY https://github.com/google/googletest.git
+#   GIT_TAG        release-1.11.0
+# )
+# FetchContent_MakeAvailable(googletest)
 
-add_library(GTest::GTest INTERFACE IMPORTED)
-target_link_libraries(GTest::GTest INTERFACE gtest_main)
+# add_library(GTest::GTest INTERFACE IMPORTED)
+# target_link_libraries(GTest::GTest INTERFACE gtest_main)
 
-add_executable(VectorPractice_test VectorPractice_unittest.cpp)
 
-target_link_libraries(VectorPractice_test
- PRIVATE
-  GTest::GTest
-  VectorPractice )
+# target_link_libraries(VectorPractice_test
+#  PRIVATE
+#   GTest::GTest
+#   VectorPractice )
 
-add_test(VectorPractice_gtests VectorPractice_test)
+# add_test(VectorPractice_gtests VectorPractice_test)
