--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "cmake.sourceDirectory": "/home/agreff/gh/agreff/aglearning/cpp/SU24-vectorpractice"
+    "cmake.sourceDirectory": "/home/agreff/gh/agreff/aglearning/cpp/SU24-vectorpractice",
+    "files.associations": {
+        "vector": "cpp"
+    }
 }
