linked library to simpleapp executables, switched to ninja generator

--- a/cpp/airplane/CMakeLists.txt
+++ b/cpp/airplane/CMakeLists.txt
@@ -1,8 +1,9 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.26)
 
 project(airplane)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(airplane main.cpp)
+add_subdirectory(libs)
+add_subdirectory(apps)
