--- a/cpp/airplane/.vscode/settings.json
+++ b/cpp/airplane/.vscode/settings.json
@@ -50,6 +50,11 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "fstream": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "charconv": "cpp",
+        "format": "cpp"
     }
 }
